login page removed

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -127,11 +127,9 @@ body {
 #batOrgImage {
     border-radius: 30px;
   }
-<<<<<<< HEAD
-  form.signup, form.login {
-  margin-top: 50px;
-=======
 
+  form.signup {
+  margin-top: 50px;
 
 /*SHOP CSS*/
 
@@ -160,5 +158,4 @@ body {
 html,body{
   margin: 0;
   padding: 0;
->>>>>>> f636f8446f145d1f8322277073bc8e5a9c17291c
 }
