--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,7 +5,7 @@ body {
 
 h1, h2, h3, h4{
   font-family: 'Didact Gothic', sans-serif;
-
+    text-shadow: .5px .5px #000;
 }
 
 .headerText {
@@ -105,7 +105,7 @@ h1, h2, h3, h4{
   height: 600px;
   width: auto;
   padding-top: 20px;
-  
+
 }
 
 .weatherSubBox {
@@ -141,12 +141,14 @@ padding-right: 25px;
 padding-top: 25px;
 }
 
-.products2 {
-  background-color: white;
+
+.card-content{
+  height: auto;
 }
 
 .shopItems {
   width: auto;
+  height: auto;
   background-color: lightgrey;
   padding-bottom: 50px;
 }
