--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,17 +6,23 @@ body {
 
 h1, h2, h3, h4{
   font-family: 'Didact Gothic', sans-serif;
-
-
-.weatherTable {
-  background-color: teal;
 }
+
 
 td {
   background-color: teal;
 }
 
+#subtract {
+  border-radius: 30px;
+  padding: 10px;
 }
+
+.summary {
+  font-weight: 600;
+}
+
+
 
 .headerText {
   color: white;
@@ -112,18 +118,19 @@ td {
 }
 
 #weather {
-  height: 600px;
+  height: auto;
   width: auto;
   padding-top: 20px;
-  
+
 }
 
 .weatherSubBox {
-  margin-top: 40px;
+
   margin-left: auto;
   margin-right: auto;
-  width: 90%;
-  height: 500px;
+  margin-bottom: 50px:
+  width: auto;
+  height: auto;
   padding: 20px;
   background-color: #bbdefb;
 }
